public/css/newdesign.css
@import url(http://fonts.googleapis.com/css?family=Raleway:100,200,400,700,700italic,900,400italic,300);

.container {
	width: 1200px;
}

body {
	background-color: #542437;
	font-family: 'Raleway', Arial, sans-serif;
}
h1 {
	color: #ecd178;
}

header {
	background-color: #ecd178;
	height: 145px;
}

header .signin {
	text-transform: uppercase;
	font-weight: bold;
	text-align: right;
}

header .menu {
	font-size: 18px;
	text-align: right;
}

.headerSpacer {margin-top: 10px;}
.headerSpacer3 {margin-top: 7px;}
.headerspacer2 {margin-top: 30px; padding-left-left: 15px;}
.spacer {margin-top: 20px;}
.minus {margin-left: -10px;}
.minus2 {margin-top: -37px; width: 130px;}
.smallslid {margin-left: 30px;}
.slid {margin-bottom: 10px;}
.bigslid {margin-left: 140px;}
.bigslid h5 {font-size: 30px; font-weight: 700;}
.minus2 h5 {font-size: 30px; font-weight: 400; color: #542437; position: absolute; top: 84px; left:-15px;}
.minus2 h15 {font-size: 25px; font-weight: 400; color: #ecd077; position: absolute; top: 92px; left:83px;}
p.small {font-size: 17px; font-weight: 400; margin-left: -20px; }

footer {
	background-color: #ecd178;
	height: 277px;
	color: #542437;
	font-size: 12px;
}
footer .blocks {
	padding: 15px;
	width: 22%;
	display: block;
}
footer .copy {
	font-size: 14px;
	margin-top: 15px;
}
.left {float: left;}
.right {float: right;}
.leftapp {
	float: left;
	padding-left: 48px;
	padding-top: 10px;
	padding-bottom: 10px;
}
.right_star {
	float: right;
	padding-top: 20px;
	padding-right: 35px;
	height: 17px;
	color: #ecd077;
}
.land {
	width: 26% !important;
	float: right;
}
.right_votes {
	text-align: right;
	color: #ecd077;
	font-size: 18px;
	font-weight: 700;
	margin-top: 3px;
	width: 20%;
	float: right;
}
.well.redbox {
	border-radius: 0px;
	min-width: 100px;
	height: 82px;
	border: none;
}
.well2.redbox {
	border-radius: 0px;
	min-width: 158px;
	height: 97px;
	border: none;
	padding-top: 7px;
	font-size:40px;
	font-weight: 100;
	text-align: center;
	text-transform: none;
}
.well2.yellow {
	border-radius: 0px;
	min-width: 108px;
	height: 173px;
	border: none;
	padding-top: 60px;
	font-size:40px;
	font-weight: 100;
	text-align: center;
	text-transform: none;
}
.well3 {
	border-radius: 0px;
	min-width: 145px;
	border: none;
	font-size:40px;
	padding: 10px;
	padding-bottom: 7px;
	padding-left: 40px;
	font-weight: 100;
	text-align: left;
	text-transform: none;
}
.well4 {
	border-radius: 0px;
	min-width: 138px;
	border: none;
	font-size:40px;
	padding: 10px;
	padding-bottom: 7px;
	padding-left: 40px;
	font-weight: 100;
	text-align: left;
	text-transform: none;
	margin-left: -18px;
	height: 99px;
}
.well5 {
	border-radius: 0px;
	min-width: 138px;
	border: none;
	font-size:20px;
	padding: 10px;
	padding-bottom: 7px;
	font-weight: 100;
	text-align: center;
	text-transform: none;
	margin-left: 10px !important;
}
.well2.yellowborder {
	border-radius: 0px;
	min-width: 108px;
	height: 173px;
	border: none;
	font-size:40px;
	font-weight: 100;
	text-align: center;
	text-transform: none;
	background-color: none;
    border: 10px solid #ecd077 !important;
    margin-left: 10px !important;
}
.redbox {
	background-color: #c22844;
	text-transform: uppercase;
	color: #542437;
	margin-bottom: 10px;
}
.purpleline{
	width: 6px;
	height: 155px;
	margin-left: 20px;
	margin-top: -10px;
}
.in.orangebox {
	width: 47%;
	float: left;
}
.orangebox {
	background-color: #d95a42;
	color: #542437;
	font-weight: 100;
	font-size: 86px;
	margin-bottom: 10px;
	margin-left: 0px;
	text-align: center;
	width: 100%;
}
.bluebox {
	background-color: #53777a;
	color: #542437;
	font-weight: 100;
	font-size: 86px;
	margin-bottom: 10px;
	margin-left: 0px;
	text-align: left;
	padding: 20px;
}
.redbox h6 {
	color: inherit;
	font-size: 20px;
	font-weight: 600;
	text-align: center;
	margin-top: -12px;
	padding-bottom: 10px;
}
.redbox h4 {
	color: inherit;
	font-size: 20px;
	font-weight: 600;
	text-align: center;
	margin-top: -12px;
	padding-bottom: 3px;
}
.sociallogin img {
	margin: auto;
	vertical-align:middle;
	text-align:center;
	float: none;
	display: block;
}
.logo {
	padding-top: 10px;
	padding-left: 15px;
}
.arrow {
	padding-bottom: 26px;
	margin: auto;
	vertical-align:middle;
	text-align:center;
	float: none;
	display: block;
}
.arrow2 {
	padding-bottom: 6px;
	margin: auto;
	vertical-align:middle;
	text-align:center;
	float: none;
	display: block;
}
.image {
	padding-bottom: 10px;
	vertical-align:middle;
	text-align:left;
	float: none;
	display: block;
	position: relative;
	color: #ecd077;
}
.image2 {
	width: 55px;
	vertical-align:middle;
	text-align:left;
	float: none;
	display: block;
	color: #542437;
	position: relative;
}
a.link1{
	text-decoration: none;
	color: #542437;
}
a.link1:hover {
	text-decoration: none;
	color: #53777a;
}
a.link2{
	text-decoration: none;
	padding-left: 6px;
	font-weight: 700;
	font-size: 14px;
	color: #ecd077;
}
a.link2:hover {
	text-decoration: none;
	color: #53777a;
}
a.link4{
	text-decoration: none;
	color: #542437;
}
a.link4:hover {
	text-decoration: none;
	color: #ecd077;
}
a.link5{
	text-decoration: none;
	color: #542437;
}
a.link5:hover {
	text-decoration: none;
	color: #542437;
}
.login {
	color: #542437;
}
input.file_input_textbox {
	color:#542437;
	line-height: 39px;
	font-size: 32px;
	font-weight: 100;
	border: none;
	border-top-left-radius: 5px;
	border-bottom-left-radius: 5px;
	border-top-right-radius: 0px;
	border-bottom-right-radius: 0px;
}
input.file_input_textbox2 {
	color:#ecd077;
	font-size: 32px;
	font-weight: 100;
	border: none;
	border-radius: 5px;
	margin-top:15px; 
	line-height: 39px;
	background:url("../img/email-icon.svg")no-repeat scroll 15px 15px;
	background-color: #542437;
	padding-left: 50px;
	max-width: 429px;
}
/* ... */

